# candle

./: Cargo.toml
candle-metal-kernels/src/metal/: buffer.rs
candle-sd15-bridge/: Cargo.toml  Makefile  cbindgen.toml
candle-sd15-bridge/include/: candle_sd15_bridge.h  module.modulemap
candle-sd15-bridge/src/: lib.rs
candle-sdxl-bridge/: Cargo.toml  Makefile  Makefile.bak  cbindgen.toml
candle-sdxl-bridge/include/: candle_sdxl_bridge.h  module.modulemap
candle-sdxl-bridge/src/: lib.rs
